fixed iterrative name atloading screen overlapping

--- a/app/globals.css
+++ b/app/globals.css
@@ -128,10 +128,12 @@
     @apply bg-background text-foreground;
   }
 }
+
 body {
-  overflow:hidden ;
+  overflow: hidden;
   height: 100vh;
 }
+
 /* h-17.5 flex items-center justify-center */
 nav {
   display: flex;
@@ -202,6 +204,12 @@ nav .circle {
 
 
 
+
+@media (min-width: 1060px) {
+  .prr h1 {
+    bottom: -11rem;
+  }
+}
 
 @media (max-width: 1180px) {
   .outer-eye {
@@ -477,15 +485,15 @@ main {
     animation: .5s showupSocial ease-in forwards;
   }
 
-  nav .menu-list ul li:nth-child(2) a{
+  nav .menu-list ul li:nth-child(2) a {
     animation-delay: 0s;
   }
 
-  nav .menu-list ul li:nth-child(3) a{
+  nav .menu-list ul li:nth-child(3) a {
     animation-delay: .25s;
   }
 
-  nav .menu-list ul li:nth-child(4) a{
+  nav .menu-list ul li:nth-child(4) a {
     animation-delay: .5s;
   }
 
